fix hero overflow

--- a/scss/custom-content/_bcn-hero-banner.scss
+++ b/scss/custom-content/_bcn-hero-banner.scss
@@ -1,6 +1,6 @@
 .bcn-hero-with-icon-wrapper {
   height: auto;
-  width: 100vw;
+  
   background-color: $pink !important;
 
   -webkit-mask-image: url($bottom-curve--desktop);
